--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<div class="col">Protocol to filter by.  Can specifiy wellknown name or number. </div>
 			</div>
 			<div class="row">
-				<div class="col">[src|dst] net &lt;address[/bitmask]|address netmask&gt;; </div>
+				<div class="col">[src|dst] net &lt;address[/bitmask]|address netmask&gt; </div>
 				<div class="col">Network net|bit mask to search for. 'src' or 'dst' can be used to filter down to source or destination.</div>
 			</div>
 			<div class="row">
