update help for 'port in' description

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 				<div class="col">Port to search for. 'src' or 'dst' can be used to filter down to source or destination.</div>
 			</div>
 			<div class="row">
+				<div class="col">[src|dst] port in [portlist] </div>
+				<div class="col">Ports to search for. Comma separate the port numbers. 'src' or 'dst' can be used to filter down to source or destination.</div>
+			</div>
+			<div class="row">
 				<div class="col">ttl &lt;comp&gt; &lt;number&gt; </div>
 				<div class="col">Filter by TTL.</div>
 			</div>
