--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="sytlesheet" type="text/css" href="dygraph.css" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="dygraph.js"></script>
+	<script type="text/javascript" src="addr.js"></script>
 	<script type="text/javascript" src="flow_sort.js"></script>
 	<script type="text/javascript" src="flows.js"></script>
 	<script type="text/javascript" src="graphs.js"></script>
